--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -11,6 +11,7 @@ jobs:
     
     steps:
       - uses: tgymnich/fork-sync@v1.8
+        id: sync
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           owner: ORIGINAL_OWNER
@@ -18,6 +19,7 @@ jobs:
           head: main
 
       - name: Create Release
+        if: steps.sync.outputs.has_new_commits == 'true'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
