--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -2,7 +2,7 @@ name: Sync Fork and Release
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * 0'
   workflow_dispatch:
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
       - uses: tgymnich/fork-sync@v1.8
         id: sync
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           owner: ORIGINAL_OWNER
           base: main
           head: main
