--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -14,7 +14,7 @@ jobs:
         id: sync
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          owner: ORIGINAL_OWNER
+          owner: tdlib
           base: main
           head: main
 
